--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="title">Ma<span class="text-r-color">r</span>y</h3>
             <ul>
@@ -35,10 +35,129 @@
         </div>
     </header>
     <main>
-
+        <section class="about-me secondary-bg">
+            <h3 class="section-title">
+                About Me
+            </h3>
+            <p class="section-desc">
+                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have exceptional resulfs while working with me. Delivering within time and budget which meets clients requirementred ur mata.
+            </p>
+            <div class="About-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-desc">Mary Haedy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-desc">md@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-desc">Dec 19, 2000</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">from</p>
+                    <p class="item-desc">Dhaka, BD</p>
+                </div>
+            </div>
+        </section>
+        <!-- section start -->
+         <section class="skills">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use.Want to find out more about my experience? Check out my on resume and project portfolio.</p>
+            <div class="app-container">
+                <div class="app">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="app-title">Vanila JavaScript</h3>
+                    <p class="app-desc">List skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="app">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="app-title">React</h3>
+                    <p class="app-desc">List skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="app">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="app-title">Nodejs</h3>
+                    <p class="app-desc">List skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="app">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="app-title">Mongo</h3>
+                    <p class="app-desc">List skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+         </section>
+         <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <resume-column>
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                </resume-column>
+                <resume-column>
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University/2012-2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</div>
+                    </div>
+                </resume-column>
+            </div>
+            <div class="Downlods">
+                <button class="Downlod">Downlods CV</button>
+            </div>
+         </section>
+         
     </main>
-    <footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <div class="foot-section-title">Lats Connect</div>
+            <p class="foot-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
+            <div class="icon">
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <div class="foot-form-title">Inbox Me</div>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea class="text-are" id="" placeholder="Massage" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="button" value="Submet">
 
+            </form>
+        </div>
     </footer>
 </body>
 </html>
