add a @media screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner hide">
             <div class="banner-content">
                 <h4 class="banner-h4">HI, I am</h4>
                 <H1 class="banner-title">Nary Hardy</H1>
@@ -35,7 +35,7 @@
         </div>
     </header>
     <main>
-        <section class="about-me secondary-bg">
+        <section class="about-me secondary-bg hide">
             <h3 class="section-title">
                 About Me
             </h3>
@@ -62,7 +62,7 @@
             </div>
         </section>
         <!-- section start -->
-         <section class="skills">
+         <section class="skills hide">
             <h3 class="section-title">What I do</h3>
             <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use.Want to find out more about my experience? Check out my on resume and project portfolio.</p>
             <div class="app-container">
@@ -88,7 +88,7 @@
                 </div>
             </div>
          </section>
-         <section class="resume">
+         <section class="resume hide">
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-container">
                 <resume-column>
@@ -138,7 +138,7 @@
          </section>
          
     </main>
-    <footer class="secondary-bg">
+    <footer class="secondary-bg hide">
         <div class="footer-column">
             <div class="foot-section-title">Lats Connect</div>
             <p class="foot-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
