--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web-developer-protfolio</title>
+    <title>web-developer-protfo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -132,8 +132,8 @@
                     </div>
                 </resume-column>
             </div>
-            <div class="Downlods">
-                <button class="Downlod">Downlods CV</button>
+            <div class="Downlod">
+                <button class="Down">Downlods CV</button>
             </div>
          </section>
          
